--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,7 @@
-<header>
-    <h1>Angular CRUD</h1>
-    <a [routerLink]="''">Home</a>
-    <a [routerLink]="'add'">Add Photo</a>
+<header class="headerWrapper">
+  <h1 class="headerTitle">Angular CRUD</h1>
+  <div class="linkWrapper">
+    <a [routerLink]="''" class="headerLink"><strong>Home</strong></a>
+    <a [routerLink]="'add'" class="headerLink"><strong>Add Photo</strong></a>
+  </div>
 </header>
