--- a/src/app/components/add-photo/add-photo.component.html
+++ b/src/app/components/add-photo/add-photo.component.html
@@ -1,14 +1,84 @@
-<section>
-    <h2>Add your Photo!</h2>
-    <form [formGroup]="photoForm" action="" (submit)="addPhoto()">
-        <label for="photo-title">Enter title</label>
-        <input type="text" id="photo-title" formControlName="title">
-        <label for="photo-description">Enter description</label>
-        <input type="text" id="photo-description" formControlName="description">
-        <label for="photo-URL">Enter photo URL</label>
-        <input type="text" id="photo-URL" formControlName="imageURL">
-        <label for="photo-date">Enter the date the photo was taken</label>
-        <input type="date" id="photo-date" formControlName="dateTaken">
-        <button type="submit">Add photo</button>
-    </form>
+<section class="addPhotoWrapper">
+  <h2 class="addPhotoHeading">Add your Photo!</h2>
+  <form [formGroup]="photoForm" (ngSubmit)="addPhoto()" class="addPhotoForm">
+    <div class="formObjectWrapper">
+      <label for="photo-title" class="formLabel">Enter title</label>
+      <input
+        type="text"
+        id="title"
+        name="title"
+        formControlName="title"
+        class="formInput"
+      />
+      <div *ngIf="form['title'].touched && form['title'].invalid">
+        <div
+          *ngIf="form['title'].errors && form['title'].errors['required']"
+          class="formAlert"
+        >
+          Name is required
+        </div>
+      </div>
+    </div>
+
+    <div class="formObjectWrapper">
+      <label for="photo-description" class="formLabel">Enter description</label>
+      <input
+        type="text"
+        name="description"
+        formControlName="description"
+        class="formInput"
+      />
+      <div *ngIf="form['description'].touched && form['description'].invalid">
+        <div
+          *ngIf="
+            form['description'].errors && form['description'].errors['required']
+          "
+          class="formAlert"
+        >
+          Description is required
+        </div>
+      </div>
+    </div>
+
+    <div class="formObjectWrapper">
+      <label for="photo-URL" class="formLabel">Enter photo URL</label>
+      <input
+        type="text"
+        name="url"
+        formControlName="imageURL"
+        class="formInput"
+      />
+      <div *ngIf="form['imageURL'].touched && form['imageURL'].invalid">
+        <div
+          *ngIf="form['imageURL'].errors && form['imageURL'].errors['required']"
+          class="formAlert"
+        >
+          Image URL is required
+        </div>
+      </div>
+    </div>
+
+    <div class="formObjectWrapper">
+      <label for="photo-date" class="formLabel"
+        >Enter the date the photo was taken</label
+      >
+      <input
+        type="date"
+        name="date"
+        formControlName="dateTaken"
+        class="formInput"
+      />
+      <div *ngIf="form['dateTaken'].touched && form['dateTaken'].invalid">
+        <div
+          *ngIf="
+            form['dateTaken'].errors && form['dateTaken'].errors['required']
+          "
+          class="formAlert"
+        >
+          Date is required
+        </div>
+      </div>
+    </div>
+    <app-button type="submit" color="#3aed3a" text="Add Photo"></app-button>
+  </form>
 </section>
