--- a/src/app/components/all-photos/all-photos.component.html
+++ b/src/app/components/all-photos/all-photos.component.html
@@ -1,8 +1,10 @@
 <h1 *ngIf="!photos">Loading....</h1>
 
-<section *ngFor="let photo of photos">
-  <a [routerLink]="['/photo', photo.id]" *ngIf="photo" class="photoCard">
-    <img [src]="photo.imageURL" [alt]="photo.title" />
-    <h4>{{ photo.title }}</h4>
-  </a>
+<section class="allPhotosWrapper">
+  <div *ngFor="let photo of photos" class="cardWrapper">
+    <a [routerLink]="['/photo', photo.id]" *ngIf="photo" class="photoCard">
+      <img [src]="photo.imageURL" [alt]="photo.title" />
+      <h4 class="photoHeading">{{ photo.title }}</h4>
+    </a>
+  </div>
 </section>
