--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,11 @@
 * {
     margin: 0;
-    padding: 0;
+    padding: 0px;
     box-sizing: border-box;
 }
 
 body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  padding: 10px;
+  background-color: #221117;
 }
