--- a/src/app/components/button/button.component.html
+++ b/src/app/components/button/button.component.html
@@ -1,3 +1,8 @@
-<button class="button" type="{type}" (click)="onClick()" [ngStyle]="{'background-color':color}">
-    <h4 class="buttonText">{{text}}</h4>
+<button
+  class="button"
+  type="{type}"
+  (click)="onClick()"
+  [ngStyle]="{ 'background-color': color }"
+>
+  <h4 class="buttonText">{{ text }}</h4>
 </button>
