--- a/src/app/components/all-photos/all-photos.component.css
+++ b/src/app/components/all-photos/all-photos.component.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Kalam&display=swap");
 .allPhotosWrapper {
   max-width: 1200px;
   width: 100%;
@@ -7,10 +8,6 @@
   grid-column-gap: 20px;
   grid-row-gap: 20px;
   justify-content: center;
-}
-
-.photoCard {
-  text-decoration: none;
 }
 
 .cardWrapper {
@@ -23,10 +20,32 @@
   border: 1px solid #ccc;
   padding: 10px;
   background-color: white;
+  transition: 0.3s;
+}
+
+.cardWrapper:hover {
+  box-shadow: 0 0 10px rgb(255, 255, 255);
+}
+
+.photoImageWrapper {
+  margin-top: 10px;
+  width: 100%;
+  max-width: 200px;
+  height: 100%;
+  max-height: 200px;
+  aspect-ratio: 1;
+  overflow: hidden;
+  display: inline-block;
+}
+
+.photoCard {
+  text-decoration: none;
 }
 
 .photoHeading {
   padding-top: 5px;
   color: black;
   text-align: center;
+  font-size: 20px;
+  font-family: "Kalam", cursive;
 }
